--- a/4.Promts/Promts.ipynb
+++ b/4.Promts/Promts.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Basic Promt"
+    "# 1. Basic Prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "'My name Is Debasish Das and I am from India. I have done my Master '"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,9 @@
     "input=PromptTemplate(template=\"My name Is {name} and I am from {country}. I have done my {education} \",\n",
     "                     input_variables=['name', 'country','education'],validate_template=True)\n",
     "\n",
-    "input.format(name= 'Debasish Das', education= 'Master', country='India')\n"
+    "input.format(name= 'Debasish Das', education= 'Master', country='India')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -304,7 +306,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm",
+   "display_name": "env1",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
